# DDS

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
apps/core/: admin.py  autocompletes.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/core/filters/: __init__.py
apps/core/fixtures/: references.json
apps/core/forms/: __init__.py  admin_form.py
apps/core/migrations/: 0001_initial.py
apps/core/models/: __init__.py  cashflow.py  references.py
apps/core/serializers/: __init__.py  cashflow.py  references.py
apps/core/views/: __init__.py  cashflow.py  references.py
config/: urls.py
config/settings/: base.py  jwt_settings.py  other.py  rest_framework.py
